Fix insight button overflow

--- a/app/assets/stylesheets/layout/_card.scss
+++ b/app/assets/stylesheets/layout/_card.scss
@@ -135,5 +135,6 @@ $card-hr: 1px solid whitesmoke;
 
   .human {
     @extend .cloud-card-human;
+    width: 50%;
   }
 }
